change login to anchor

--- a/style.css
+++ b/style.css
@@ -38,12 +38,10 @@ body {
     margin: 21px 0 0 40px;
     position: fixed;
 }
-.header-right span {
-    padding: 10px 30px;
+.login {
+    padding: 0px 30px;
     background-color: rgba(66, 62, 62, 0.7);
-    display: inline-block;
     float: right;
-    line-height: 70px;
     margin-right: 20px;
     font-size: 18px;
 }
@@ -100,4 +98,13 @@ body {
     width: 220px;
     height: 50px;
 }
-
+.last {
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    float: left;
+    bottom: 0;
+    margin: 0 auto;
+    width: 100%;
+}
