--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-color: lightblue;
     width: 100%;
     height: 1000px;
+
 }
 .header {
     background-color: whitesmoke;
@@ -44,6 +45,60 @@ body {
     float: right;
     margin-right: 20px;
     font-size: 18px;
+}
+.weprovide{
+    margin-top:90px;
+    height: 100px;
+}
+/*Workflow*/
+}
+.workflow{
+    height: 100px;
+}
+.section-title{
+    font-size: 28px;
+    padding-left:200px;
+    padding-top:0px;
+    margin:0 auto;
+    font-family:serif;
+
+}
+.section-tagline{
+    font-size: 35px;
+    padding-top:10px;
+    margin:0 auto;
+    padding-left:100px; 
+}
+.workflow-item{
+    float:left;
+    padding-right: 100px;
+}
+.workflow-item img{
+    height: 50px;
+    width: 50px;
+    margin-right: 40px;
+}
+.workflow-item p{
+    font-size: 20px;
+}
+.img1 {
+    margin-top:0px;
+    margin-left: 600px;
+}
+.p1{
+    margin-left: 590px;
+}
+.img2 {
+    margin-top: 40px;
+    padding-left: 10px;
+}
+.img3{
+    margin-top: 80px;
+    padding-left: 18px;
+}
+.img4{
+    margin-top: 120px;
+    padding-left: 0px;
 }
 .footer-top-right {
     float: right;
