--- a/style.css
+++ b/style.css
@@ -1,165 +1,307 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-    margin: 0 auto;
-    box-sizing: border-box;
+  margin: 0;
+  font-family: "Lucida Grande";
 }
 
-.main {
-    background-color: lightblue;
-    width: 100%;
-    height: 1000px;
+a {
+  text-decoration: none;
+}
 
+.clear {
+  clear: left;
 }
-.header {
-    background-color: whitesmoke;
-    width: 100%;
-    height: 90px;
-    position: fixed;
-    top: 0;
-    z-index: 10px;
-    font-family: 'Nunito Light', 'Times New Roman', Times, serif;
+
+.container {
+  max-width: 1170px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
 }
-.header-right {
-    float: right;
+
+.top-wrapper {
+  padding: 180px 0 100px 0;
+  background-image: url(banner.jpg);
+  background-size: cover;
+  color: white;
 }
+
+.column-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column-wrapper div {
+  flex: auto;
+  width: 50%;
+}
+
+.left-wrapper {
+  padding-bottom: 50px;
+}
+
+.left-wrapper h2 {
+  opacity: 0.8;
+  font-size: 30px;
+}
+
+.left-wrapper span {
+  width: 100px;
+}
+
+.left-wrapper h1 {
+  opacity: 0.8;
+  font-size: 45px;
+  letter-spacing: 5px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.left-wrapper p {
+  opacity: 0.8;
+  margin-bottom: 3px;
+}
+
+.right-wrapper {
+  display: block;
+}
+
+.right-wrapper img {
+  width: 500px;
+  display: block;
+  margin: 50px auto;
+  position: relative;
+}
+
+header {
+  height: 65px;
+  width: 100%;
+  background-color: rgba(34, 49, 52, 0.9);
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+.logo {
+  width: 124px;
+  margin-top: 10px;
+}
+
 .header-left {
-    float: left;
+  float: left;
 }
+
+.header-right {
+  float: right;
+  margin-right: -25px;
+}
+
 .header-right a {
-    float: right;
-    margin-right: 30px;
-    line-height: 90px;
-    text-decoration: none;
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+  float: left;
+  transition: all 0.5s;
 }
+
 .header-right a:hover {
-    color: black;
+  background-color: rgba(255, 255, 255, 0.3);
 }
-.header-left img {
-    width: 100px;
-    height: 50px;
-    margin: 21px 0 0 40px;
-    position: fixed;
+
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
 }
-.login {
-    padding: 0px 30px;
-    background-color: rgba(66, 62, 62, 0.7);
-    float: right;
-    margin-right: 20px;
-    font-size: 18px;
+
+.lesson-wrapper {
+  padding-bottom: 30px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #5a4eff;
+  text-align: center;
 }
-.weprovide{
-    margin-top:90px;
-    height: 100px;
+
+.heading {
+  padding-top: 80px;
+  padding-bottom: 50px;
+  color: #ffffff;
 }
-/*Workflow*/
+
+.heading h2 {
+  font-weight: normal;
 }
-.workflow{
-    height: 100px;
+
+.lesson-team {
+  float: left;
+  width: 20%;
 }
-.section-title{
-    font-size: 28px;
-    padding-left:200px;
-    padding-top:0px;
-    margin:0 auto;
-    font-family:serif;
+
+.team-icon {
+  position: relative;
+}
+
+.team-icon p {
+  position: absolute;
+  top: 44%;
+  width: 100%;
+  color: white;
+}
+
+.team-icon img {
+  height: 200px;
+  border-radius: 50%;
+}
+
+.text-contents {
+  width: 80%;
+  display: inline-block;
+  margin-top: 15px;
+  font-size: 15px;
+  color: #ffffff;
+}
+
+.heading h3 {
+  font-weight: normal;
+}
+
+.footer {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.footer-top {
+  margin: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-top div {
+  float: left;
+  width: 50%;
+}
+
+.footer-top img {
+  width: 100px;
+  height: 50px;
+  margin-top: 25px;
+}
+
+.footer-right {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-right a {
+  flex: auto;
+  width: 50%;
+}
+
+.end {
+  float: left;
+  width: 25%;
+}
+
+.fa-map-marker-alt {
+  margin-top: 20px;
+}
+
+.fa-address-book {
+  margin-top: 30px;
+}
+
+.fa {
+  text-decoration: none;
+}
+
+.end a {
+  margin-top: 10px;
+  text-decoration: none;
+  display: block;
+}
+
+.footer-bottom {
+  border-top: 1px solid black;
+}
+
+.four {
+  float: left;
+}
+
+.four input {
+  width: 220px;
+  height: 30px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+.four textarea {
+  width: 220px;
+  height: 50px;
+}
+
+.last {
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  text-align: center;
+  float: left;
+  bottom: 0;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.workflow-wrapper {
+  padding-bottom: 30px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #fdfdfd;
+  text-align: center;
+
 
 }
-.section-tagline{
-    font-size: 35px;
-    padding-top:10px;
-    margin:0 auto;
-    padding-left:100px; 
+
+.workflow-heading {
+  padding-top: 80px;
+  padding-bottom: 50px;
+  color: #000000;
 }
-.workflow-item{
-    float:left;
-    padding-right: 100px;
+
+.workflow-heading h2 {
+  font-size: 28px;
+  font-family: serif;
 }
-.workflow-item img{
-    height: 50px;
-    width: 50px;
-    margin-right: 40px;
+
+.workflow-item {
+  float: left;
+  width: 25%;
 }
-.workflow-item p{
-    font-size: 20px;
+
+.workflow-icon {
+  position: relative;
 }
-.img1 {
-    margin-top:0px;
-    margin-left: 600px;
+
+.workflow-icon p {
+  position: absolute;
+  top: 44%;
+  width: 100%;
+  color: rgb(0, 0, 0);
 }
-.p1{
-    margin-left: 590px;
+
+.workflow-icon img {
+  height: 100px;
 }
-.img2 {
-    margin-top: 40px;
-    padding-left: 10px;
-}
-.img3{
-    margin-top: 80px;
-    padding-left: 18px;
-}
-.img4{
-    margin-top: 120px;
-    padding-left: 0px;
-}
-.footer-top-right {
-    float: right;
-}
-.footer-top {
-    margin: 35px 0;
-}
-.footer-top img {
-    width: 100px;
-    height: 50px;
-    margin-left: 100px;
-    margin-top: 25px;
-}
-.footer {
-    margin: 0 40px;
-}
-.footer-top-right a {
-    float: right;
-    margin-right: 180px;
-}
-.end {
-    float: left;
-    margin: 10px 0 25px 150px;
-}
-.fa-map-marker-alt {
-    margin-top: 20px;
-}
-.fa-address-book {
-    margin-top: 30px;
-}
-.fa {
-    text-decoration: none;
-}
-.end a{
-    margin-top: 10px;
-    text-decoration: none;
-    display: block;
-}
-.footer-bottom {
-    border-top: 1px solid black;
-}
-.four{
-    float: left;
-}
-.four input {
-    width: 220px;
-    height: 30px;
-    margin-bottom: 15px;
-    margin-top: 15px;
-}
-.four textarea {
-    width: 220px;
-    height: 50px;
-}
-.last {
-    background-color: black;
-    color: white;
-    font-size: 12px;
-    text-align: center;
-    float: left;
-    bottom: 0;
-    margin: 0 auto;
-    width: 100%;
+
+.workflow-contents {
+  width: 80%;
+  display: inline-block;
+  margin-top: 15px;
+  font-size: 28px;
+  color: #000000;
 }
