--- a/style.css
+++ b/style.css
@@ -64,6 +64,12 @@ a {
   opacity: 0.8;
   margin-bottom: 3px;
 }
+.left-wrapper img {
+  width: 500px;
+  display: block;
+  margin: 50px auto;
+  position: relative;
+}
 
 .right-wrapper {
   display: block;
@@ -304,4 +310,43 @@ header {
   margin-top: 15px;
   font-size: 28px;
   color: #000000;
+}
+
+.btn-wrapper {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.btn-wrapper p {
+  margin: 10px 0;
+}
+.btn {
+  padding: 12px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+.hire-wrapper {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 80px;
+  text-align: center;
+}
+
+.resume {
+  padding: 15px 40px;
+  background-color: #5dca88;
+  cursor: pointer;
+  box-shadow: 0 7px #1a7940;
+}
+
+.resume:active {
+  position: relative;
+  top: 7px;
+  box-shadow: none;
 }
