--- a/style.css
+++ b/style.css
@@ -346,9 +346,9 @@ header {
 
 .resume {
   padding: 15px 40px;
-  background-color: #5dca88;
+  background-color: #1464db;
   cursor: pointer;
-  box-shadow: 0 7px #1a7940;
+  box-shadow: 0 7px #223663;
 }
 
 .resume:active {
