--- a/responsive.css
+++ b/responsive.css
@@ -28,6 +28,10 @@
     display: block;
     margin: 100px auto;
   }
+  
+  .left-wrapper img{
+        width: 400px;
+  }
 
   .left-wrapper h2 {
     margin-top: 10px;
@@ -100,9 +104,10 @@
   }
 
   .right-wrapper img {
-    width: 200px;
+    width: 300px;
     display: block;
     margin: 0 auto;
+    padding-top: 25px;
   }
 
   .workflow-item {
