--- a/style.css
+++ b/style.css
@@ -340,7 +340,7 @@ header {
 .hire {
   padding-top: 80px;
   border-bottom: 1px solid #eee;
-  padding-bottom: 80px;
+  padding-bottom: 50px;
   text-align: center;
 }
 
@@ -355,4 +355,38 @@ header {
   position: relative;
   top: 7px;
   box-shadow: none;
+}
+
+.animat {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  height: 50px;
+  background-color: rgb(250, 250, 33);
+  padding: 0 0;
+}
+
+.animat p{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  line-height: 50px;
+  color: black;
+  transform: translateX(100%);
+  animation: scrolling 12s linear infinite;
+}
+
+@keyframes scrolling {
+  0% {
+      transform: translateX(100%)
+  }
+
+  100% {
+      transform: translateX(-100%);
+  }
 }
