--- a/responsive.css
+++ b/responsive.css
@@ -24,9 +24,13 @@
   }
 
   .right-wrapper img {
-    width: 200px;
+    width: 400px;
     display: block;
     margin: 100px auto;
+  }
+
+  .left-wrapper img{
+        width: 400px;
   }
 
   .left-wrapper h2 {
@@ -100,9 +104,10 @@
   }
 
   .right-wrapper img {
-    width: 200px;
+    width: 300px;
     display: block;
     margin: 0 auto;
+    padding-top: 25px;
   }
 
   .workflow-item {
