--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ a {
   opacity: 0.8;
   margin-bottom: 3px;
 }
+
 .left-wrapper img {
   width: 500px;
   display: block;
@@ -325,6 +326,7 @@ header {
 .btn-wrapper p {
   margin: 10px 0;
 }
+
 .btn {
   padding: 12px 24px;
   color: white;
@@ -337,6 +339,7 @@ header {
 .btn:hover {
   opacity: 1;
 }
+
 .hire {
   padding-top: 80px;
   border-bottom: 1px solid #eee;
@@ -355,4 +358,38 @@ header {
   position: relative;
   top: 7px;
   box-shadow: none;
+}
+
+.animat {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  height: 50px;
+  background-color: rgb(250, 250, 33);
+  padding: 0 0;
+}
+
+.animat p {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  line-height: 50px;
+  color: black;
+  transform: translateX(100%);
+  animation: scrolling 12s linear infinite;
+}
+
+@keyframes scrolling {
+  0% {
+    transform: translateX(100%)
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
 }
