--- a/style.css
+++ b/style.css
@@ -376,6 +376,9 @@ header {
   height: 50px;
   background-color: rgb(250, 250, 33);
   padding: 0 0;
+  margin-bottom: 20px;
+  border-top: 1px white;
+  border-bottom: 1px white;
 }
 
 
@@ -404,4 +407,82 @@ header {
   100% {
     transform: translateX(-100%);
   }
+}
+
+.nightmode {
+  display: inline-block;
+  margin-left: 46%;
+}
+
+
+.checkbox {
+	opacity: 0;
+	position: absolute;
+}
+
+.label {
+	background-color: #111;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1.5);
+}
+
+.label .ball {
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+	transform: translateX(24px);
+}
+
+.footer-bottom a:link {
+  color: black;
+  text-shadow: .1px .1px .1px wheat;
+}
+.footer-bottom a:visited {
+  color: black;
+  text-shadow: .1px .1px .1px wheat;
+}
+
+.footer-bottom .fa-instagram-square:link {
+  color: #f842d1;
+}
+.footer-bottom .fa-instagram-square:visited {
+  color: #f842d1;
+}
+.footer-bottom .fa-facebook-square:link {
+  color: #3864f7;
+}
+.footer-bottom .fa-facebook-square:visited {
+  color: #3864f7;
+}
+.footer-bottom .fa-twitter-square:link {
+  color: #5fb2ff;
+}
+.footer-bottom .fa-twitter-square:visited {
+  color: #5fb2ff;
+}
+
+.footer-bottom a:link {
+  color: rgba(255,255,255,.7);
+}
+
+body.dark {
+  background-color: rgba(0,0,0);
+  color: white;
 }
