--- a/responsive.css
+++ b/responsive.css
@@ -75,13 +75,6 @@
     width: 100%;
   }
 
-  .header-right {
-    display: none;
-  }
-
-  .menu-icon {
-    display: block;
-  }
 
   .top-wrapper h1 {
     font-size: 24px;
@@ -148,4 +141,39 @@
   .end {
     width: 100%;
   }
+
+  .menu-icon {
+    display: block;
+    position: relative;
+    margin-top: 0px;
+  }
+
+  .menu-icon input{
+    position: absolute;
+    width: 23px;
+    height: 29px;
+    margin-left: -22px;
+    margin-top: -1px;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  .header-right {
+    display:flex;
+    flex-direction: column;
+    position: absolute;
+    right: 23px;
+    width: auto;
+    top: 65px;
+    background-image: url('toggle.jpg');
+    background-size: cover;
+    opacity: .6;
+    text-align: center;
+    transform: translateX(100%);
+  }
+
+  .header-right .slide {
+    transform: translateX(0);
+  }
+
 }
