--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   font-family: "Lucida Grande";
+  overflow-x: hidden;
 }
 
 a {
@@ -125,6 +126,7 @@ header {
   font-size: 25px;
   padding: 21px 0;
   display: none;
+  position: relative;
 }
 
 .lesson-wrapper {
@@ -383,7 +385,6 @@ header {
 
 
 .animat p {
-
   position: absolute;
   width: 100%;
   height: 100%;
